NM-3697 User profile for logged in admin visible with appropriate notice

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1719,6 +1719,8 @@ en:
 
   user_profile:
     labels:
+      admin_profile: This is an admin profile. It’s visible only to other admins while they are logged in and will not be visible to regular users at any time.
+
       visitor:
         no_products: '%{name} does not offer any products yet.'
         no_services: '%{name} does not offer any services yet.'
