--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -13,6 +13,9 @@ en:
         unknown: "We cannot authorize you."
     authorizations:
       not_authorized: "Sorry, you do not have permission to view that page."
+    communications:
+      validation_code: "Validation code: %{validation_code}"
+      phone_number_disconnected: "Phone number successfully disconnectd"
     shipping_options:
       dimensions_templates:
         template_added: 'Successfully added a new dimensions template.'
