NM-4080 Deposit functionality

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -102,6 +102,7 @@ en:
     remove: "Remove"
     processing: 'Processing ...'
     submit: 'Submit'
+    send: 'Send'
     cancel: 'Cancel'
     submit_draft: 'Save as draft'
     or_spaced: ' or '
