--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1241,7 +1241,7 @@ en:
       companies: 'Shop Details'
       products: 'My Products'
       transactables: 'My Listings'
-      payouts: 'Payout'
+      payouts: 'Payments'
       orders_received: 'Orders Received'
       host_reservations: 'Bookings Received'
       transfers: 'Payment Transfers'
