NM-4149 missing translations in reports

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -326,6 +326,8 @@ en:
     general:
       product: "Product"
       spree/products: "Products"
+      transactable: "Transactable"
+      transactables: "Transactables"
       listing: "Listing"
       listings: "Listings"
       reports: "Reports"
