--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1220,6 +1220,7 @@ en:
       price_availability: 'Price & Availability'
       general: 'General'
       delete_listing: 'Delete listing'
+      delete_product: 'Delete product'
       confirm_delete: 'Are you sure you want to delete this listing?'
       remove_amenity: 'Remove'
       view_edit_location: 'view / edit location'
