NM-4395 Translation key for service type on map and list view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2079,6 +2079,8 @@ en:
     results: 'results'
     per_page: 'per page'
     update_map: 'Update search when map moved'
+    service_type: "Service Type"
+    service_types: "Service Types"
 
     date_range:
       title: 'Date range'
