--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1402,6 +1402,7 @@ en:
     payments:
       reject: "What's wrong?"
       change_credit_card: 'Change credit card'
+      periods_affected: 'Periods affected'
       reject_placeholder: 'Please let us know what is the reason of declining payment'
       order: "Back to order"
       back_to_order_html: "Back <span class='hidden-xs'>to order</span>"
