NM-4448-cancellation-policy-for-just-hala

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1318,6 +1318,7 @@ en:
       exclusive_price_guests_notes: 'Exclusive booking instructions:'
       additional_charges: 'Upsell & Add-ons:'
       must_change_credit_card: 'It was not possible to charge your credit card'
+      penalty_charge_will_apply: 'Please note that due to cancelation policy you agreed to, there will be fee applied of %{penalty_fee} if you decide to cancel now.'
       update_credit_card: 'Update your credit card'
       upcoming: "Upcoming"
       archived: "Archived"
@@ -2040,6 +2041,7 @@ en:
     cancellation_time: "You have up to %{time} hours before the booking takes place to cancel."
     no_cancellation_time: "You can cancel before the first day."
     cancellation_fee: "The penalty fee for cancelling is %{fee}%. Service fee is not refunded."
+    hours_cancellation_fee: "The penalty fee for cancelling later is equivalent to %{fee} times hourly rate."
     no_cancellation_fee: "You will get full refund except of service fee."
     no_bookings_html: "You don't have any %{type} bookings. <a href='/search'>Find %{bookable_nouns} near you!</a>"
     no_tickets: "There are no tickets to show."
