--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -15,7 +15,7 @@ en:
         reservation_checkout_form:
           attributes:
             sub_total:
-              must_be_positive: 'must be positive'
+              must_be_positive: 'Total must be greater than 0'
         product_form:
           attributes:
             base:
