NM-4479 fix braintree refund messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1043,6 +1043,7 @@ en:
           captured: 'Payment captured'
           paid: 'Paid'
           refunded: 'Payment refunded'
+          voided: 'Payment voided'
           authorized: 'Payment authorized'
           failed: 'Payment failed'
           details: 'Payment details'
