NM-4462 show only future dates and hours on reservation page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -133,6 +133,7 @@ en:
     default: "Default"
     approve: 'Approve'
     reject: 'Reject'
+    no_options: 'No options'
   transactable_types:
     locations:
       listings:
