NM-4509 Do not allow to check disabled custom checkboxes
NM-4505 Notification icons for user and host registrations

NM-4507 Option to constrain video width

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1270,6 +1270,7 @@ en:
       payouts: 'Payments'
       orders_received: 'Orders Received'
       host_reservations: 'Bookings Received'
+      host_reservations_count_html: 'Bookings Received <span>%{count}</span>'
       transfers: 'Payment Transfers'
       analytics: 'Analytics'
       users: 'Manage Admins'
