--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1268,6 +1268,7 @@ en:
       payouts: 'Payments'
       orders_received: 'Orders Received'
       host_reservations: 'Bookings Received'
+      host_reservations_count_html: 'Bookings Received <span>%{count}</span>'
       transfers: 'Payment Transfers'
       analytics: 'Analytics'
       users: 'Manage Admins'
