NM-4535 Changing label for confirmed and archived missions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2119,6 +2119,7 @@ en:
       rejected: "Rejected"
       confirmed: "Confirmed"
       inactive: "Payment failed"
+      completed: "Completed"
   search:
     pricing_types:
       daily: "Daily"
