NM-4590 Add form components for locations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -562,6 +562,10 @@ en:
           object: "Object"
           user: "User"
           date: "Date"
+      instance_properties:
+        form_components: "Form Components"
+      instances:
+        instances: 'Manage Instance'
 
       transfers:
         pending: "Pending"
