--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -241,6 +241,7 @@ en:
       no_listings: "There aren't any listings at that location. Check out some other locations."
       browsing_no_listings: "There aren't any active listings at that location. Other users will be redirected to search page."
     dashboard:
+      missing_payout_information: "You are missing required payment information. Your products are going to be hidden until we verify your account. Please fill the form in %{link}"
       add_merchant_account: "Please configure your merchant account"
       add_your_company: "Please add your company first"
       company_not_valid: "Please add necessary details to your company first."
