--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -329,7 +329,7 @@ en:
         biography: 'About me'
         sms_notifications_enabled: 'Enable Text Message Notifications'
         accept_emails: 'Accept emails'
-        click_to_call: 'Enable click to call'
+        click_to_call: 'Enable Click to Call'
         public_profile: "Public profile"
         industries: "Industries"
         email: "Email"
