--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1793,6 +1793,8 @@ en:
       drag_info: 'or drag photo here to upload'
 
     click_to_call:
+      title: 'Click to Call'
+      short_info: 'Verify your number to enable voice calling between buyers and sellers without revealing your phone number'
       intro_html: '<h3>What is Click to Call?</h3> <p>We give you an easy to way to make calls between buyers and sellers while keeping phone numbers of both parties private. Thanks to <a href="http://twilio.com" rel="external">Twilio</a> integration, you will be able to make and receive calls to other users who verified their number on our website.</p> <p>When setting up a call with Twilio the other party will receive a phone call on their verified number first. When they answer, Twilio will call you back on your phone registered in the system.</p>'
       mobile_number_error: 'Mobile number %{error}'
       verified_phone_number_html: 'Your verified phone number: <b>%{phone}</b>'
@@ -1800,8 +1802,19 @@ en:
       mobile_number_html: 'Your mobile number: <b>%{phone}</b>'
       profile_link_label: 'Edit your profile to update mobile number'
       validation_code_message_html: 'Your validation code: <b><%= code %></b> Calling now&hellip;'
-      success_message_html: 'You’ve successfully verified phone number <b><%= phone %></b>'
-      error_message_html: 'Unable to connect, please try again'
+
+      connect_success_message_html: 'You’ve successfully verified phone number <b><%= phone %></b>'
+      connect_error_message_html: 'Unable to connect, please try again'
+
+      disconnect_success_message_html: 'You’ve disconnected from Twilio.'
+      disconnect_error_message_html: 'Unable to disconnect, please try again.'
+
+      verify: 'Verify'
+      verified: 'Number verified!'
+      disconnect: 'Disconnect'
+
+      not_verified_self_warning: 'You have not verified your phone number yet, you can do that in %{link} section'
+
 
   hidden_items:
     registrations:
@@ -1825,12 +1838,18 @@ en:
       call_is_over: 'Call is over'
     buttons:
       click_to_call: 'Call Me'
+      click_to_call_user: 'Call %{name}'
       call: 'Call'
       hang_up: 'Hang up'
       close: 'Close'
     status:
       calling: 'Calling...'
     error: 'Error'
+    verify_title: 'Verify Phone Number'
+    verify_info: 'You can verify your phone number in the %{link} section'
+    tooltip:
+      current_time: 'My current time: %{time}'
+      next_available_occurence: "\n\nI will be available on:\n%{time}"
 
   inappropriate_reports:
     flag_as_inappropriate: "Flag as inappropriate"
