NM-4766 define approach for api

--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -192,7 +192,9 @@ en:
 
         hidden_controls:
           update: 'Settings have been successfully saved.'
-
+        api_keys:
+          created: 'New Api Key has been generated.'
+          deleted: 'Api Key has been deleted.'
         locales:
           created: 'Language has been successfully created'
           updated: 'Language has been successfully updated'
